--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "@google/genai": "^1.12.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.2",
     "jwt": "^0.2.0",
     "lucide-react": "^0.526.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.5",
-    "next": "15.4.4",
+    "next": "^15.4.5",
     "next-auth": "^4.24.11",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
