--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "^15.4.5",
     "next-auth": "^4.24.11",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
