--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.2",
+    "lightswind": "^3.1.15",
     "lucide-react": "^0.526.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.5",
