--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@google/genai": "^1.12.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "@react-email/render": "^1.2.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
@@ -20,9 +22,11 @@
     "mongoose": "^8.16.5",
     "next": "^15.4.5",
     "next-auth": "^4.24.11",
+    "nodemailer": "^7.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "resend": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
