--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@google/genai": "^1.12.0",
+    "@langchain/core": "^0.3.72",
+    "@langchain/google-genai": "^0.2.16",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@react-email/render": "^1.2.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
+    "init": "^0.1.2",
     "jsonwebtoken": "^9.0.2",
     "lightswind": "^3.1.15",
     "lucide-react": "^0.526.0",
@@ -26,13 +29,14 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "resend": "^6.0.1"
+    "resend": "^6.0.1",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.12"
   }
 }
